objects/Stewardship_Request_Buttons_ID_Mappings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores mappings for field ID values for the following custom buttons on the object &quot;Stewardship Request&quot; 
- Address
- Business
- Business Contact
- Consumer
- Order
- Ship To</description>
    <fields>
        <fullName>Address_Lookup_Name__c</fullName>
        <description>This field stores the HTML generated Name value of the Stewardship_Request__c.Source_Address__c lookup field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Address Lookup Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Lookup_Name__c</fullName>
        <description>This field stores the HTML generated Name value of the Stewardship_Request__c.Source_Contact__c lookup field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Business Contact Lookup Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Lookup_Name__c</fullName>
        <description>This field stores the HTML generated Name value of the Stewardship_Request__c.Source_Account__c lookup field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Business Lookup Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Id_Value__c</fullName>
        <description>The value of the entity related to the button. In this case it is the ID of the Stewardship_Request__c object.</description>
        <label>Entity Id Value</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_URL_Id__c</fullName>
        <description>The 3 charachter object code from the URL</description>
        <label>Object URL Id</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Lookup_Name__c</fullName>
        <description>This field stores the HTML generated Name value of the Stewardship_Request__c.Source_Order__c lookup field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Order Lookup Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Address__c</fullName>
        <description>Address record type</description>
        <label>Record Type Value - Address</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Business_Contact__c</fullName>
        <description>Business Contact record type</description>
        <label>Record Type Value - Business Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Business__c</fullName>
        <description>Business record type</description>
        <label>Record Type Value - Business</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Consumer__c</fullName>
        <description>Consumer record type</description>
        <label>Record Type Value - Consumer</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Order__c</fullName>
        <description>Order record type</description>
        <label>Record Type Value - Order</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Ship_To__c</fullName>
        <description>Ship To record type</description>
        <label>Record Type Value - Ship To</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_Source_System_View__c</fullName>
        <description>Source System View record type</description>
        <label>Record Type Value - Source System View</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Picklist_Id__c</fullName>
        <description>This field stores the HTML generated Name value of the Stewardship_Request__c.Request_Type__c picklist field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Request Type Picklist Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Lookup_Name__c</fullName>
        <description>This field stores the HTML generated Name value of the Stewardship_Request__c.Source_Ship_To__c lookup field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Ship To Lookup Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stewardship Request Buttons ID Mappings</label>
</CustomObject>